# transformer-studio

./: Makefile  README.md  TODO.md  app-ads.txt  home.html  make_artwork.py  web_test.py
cloudformation/: template.yaml
make-artwork/: Cargo.toml  Makefile  font.py  make_artwork.py  perlin.py  profile.json  shapes.py
make-artwork/pages/: arctangent.py  perlin_background.py
make-artwork/src/: lib.rs  main.rs
make-artwork/utils/: __init__.py  consts.py  perlin.py  shapes.py
site-content/: app-ads.txt  index.html  privacy-policy.html
site-content/css/: style.css
