[package]
name = "rust_perlin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[lib]
name = "rust_perlin"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "rust_perlin"
path = "src/main.rs"

[dependencies]
pyo3 = "0.20.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
